--- a/jUnit-5-e-Mockito/src/main/resources/application.properties
+++ b/jUnit-5-e-Mockito/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=jUnit-5-e-Mockito
+
+#spring.application.name=jUnit-5-e-Mockito
 # Configurações do banco de dados H2
 # H2 console
 spring.h2.console.enabled=true
